@@ -2,6 +2,8 @@ package io.nzbee.test.integration.view.beans.category;
 
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
+
+import io.nzbee.Constants;
 import io.nzbee.view.category.product.ProductCategoryView;
 
 
@@ -11,32 +13,37 @@ public class CategoryViewBeanFactory implements ICategoryViewBeanFactory {
 
 	@Override
 	public ProductCategoryView getBean() {
-		
-		
-		
-		return new ProductCategoryView( "TST01",
-										"test product category",									
-										"FRT01",
-										new Long(10),
-										"en-GB");
+		ProductCategoryView pcv = new ProductCategoryView();
+		pcv.setCategoryCode("TST01");
+		pcv.setCategoryDesc("test product category");
+		pcv.setParentCode("FRT01");
+		pcv.setChildCount(Long.valueOf(0));
+		pcv.setObjectCount(Long.valueOf(10));
+		pcv.setLocale(Constants.localeENGB);
+		return pcv;
 	}
 	
 	@Override
 	public ProductCategoryView getPomegranateBean() {
-		return new ProductCategoryView(	"POM01",
-										"Pomegranate",									
-										"FRT01",
-										new Long(10),
-										"en-GB");
+		ProductCategoryView pcv = new ProductCategoryView();
+		pcv.setCategoryCode("POM01");
+		pcv.setCategoryDesc("Pomegranate");
+		pcv.setParentCode("FRT01");
+		pcv.setChildCount(Long.valueOf(0));
+		pcv.setObjectCount(Long.valueOf(10));
+		pcv.setLocale(Constants.localeENGB);
+		return pcv;
 	}
 	
 	@Override
 	public ProductCategoryView getCitrusBean() {
-	
-		return new ProductCategoryView(	"CIT01",
-										"Citrus",									
-										"FRT01",
-										new Long(10),
-										"en-GB");
+		ProductCategoryView pcv = new ProductCategoryView();
+		pcv.setCategoryCode("CIT01");
+		pcv.setCategoryDesc("Citrus");
+		pcv.setParentCode("FRT01");
+		pcv.setChildCount(Long.valueOf(0));
+		pcv.setObjectCount(Long.valueOf(10));
+		pcv.setLocale(Constants.localeENGB);
+		return pcv;
 	}
 }
